Adjusted login modal: changed demo to signin as guest, fixed submit issue, moved radio buttons over, added spacing between radio buttons, and fixed double log out (as mentioned earlier)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -349,6 +349,18 @@ canvas {
   outline: none;
 }
 
+.radio-buttons-login {
+  margin-left: 24px;
+}
+
+#login-radio {
+  margin-left: 15px;
+}
+
+#guest-btn {
+  background: #94618E;
+}
+
 .username-password {
   display: inline-block;;
 }
